msm8974-common: no round corner padding
Round corner padding is now default in framework.
Our screen is not crippled though, so let's make use of more statusbar
space and make battery bar look nice again.

Change-Id: Ica2e33da7ecf689b7be444c872e857541731c266

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="self_collapse_velocity">4000dp</dimen>
     <dimen name="fling_gesture_max_x_velocity">1500dp</dimen>
     <dimen name="fling_gesture_max_output_velocity">6000dp</dimen>
+    <dimen name="rounded_corner_content_padding">0dp</dimen>
 </resources>
