--- a/DeviceParts/res/xml/main.xml
+++ b/DeviceParts/res/xml/main.xml
@@ -20,8 +20,8 @@
         android:summary="@string/category_gestures_summary"
         android:persistent="false" >
         <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="org.omnirom.device"
-                android:targetClass="org.omnirom.device.TouchscreenGestureSettingsActivity" />
+                android:targetPackage="com.aicp.device"
+                android:targetClass="com.aicp.device.TouchscreenGestureSettingsActivity" />
     </Preference>
     <!--	
     <Preference
@@ -36,7 +36,7 @@
 
     <PreferenceCategory
         android:title="@string/category_vibrator">
-        <org.omnirom.device.VibratorStrengthPreference
+        <com.aicp.device.VibratorStrengthPreference
             android:key="vib_strength"
             android:title="@string/vib_strength_title_head"
             android:summary="@string/vib_strength_summary_head"
