--- a/DeviceParts/res/values/arrays.xml
+++ b/DeviceParts/res/values/arrays.xml
@@ -34,11 +34,13 @@
         <item>@string/action_none</item>
         <item>@string/action_launch_camera</item>
         <item>@string/action_torch</item>
+        <item>@string/action_wake_display</item>
     </string-array>
 
     <string-array name="action_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 </resources>
