--- a/DeviceParts/res/xml/main.xml
+++ b/DeviceParts/res/xml/main.xml
@@ -24,6 +24,12 @@
                 android:targetPackage="com.aicp.device"
                 android:targetClass="com.aicp.device.TouchscreenGestureSettingsActivity" />
     </Preference>
+    <SwitchPreference
+        android:key="fastcharge"
+        android:summary="@string/fastcharge_summary"
+        android:title="@string/fastcharge_title"
+        android:icon="@drawable/ic_fastcharge"
+        android:defaultValue="true"/>
 
     <PreferenceCategory
         android:title="@string/category_vibrator">
