msm8974-common: DeviceParts: switch to triple icons
Change-Id: I86acea121e8c5a768ac34a8b05df229c1adde10a

--- a/DeviceParts/res/xml/gesture_panel.xml
+++ b/DeviceParts/res/xml/gesture_panel.xml
@@ -34,7 +34,7 @@
             android:key="swipe_up_action_key"
             android:defaultValue="0"
             android:title="@string/category_up_swipe_gesture"
-            android:icon="@drawable/ic_slider_up"
+            android:icon="@drawable/ic_triple_up"
             android:summary="%s"
             android:dialogTitle="@string/category_up_swipe_gesture"
             android:entries="@array/action_entries"
@@ -44,7 +44,7 @@
             android:key="swipe_down_action_key"
             android:defaultValue="0"
             android:title="@string/category_down_swipe_gesture"
-            android:icon="@drawable/ic_slider_down"
+            android:icon="@drawable/ic_triple_down"
             android:summary="%s"
             android:dialogTitle="@string/category_down_swipe_gesture"
             android:entries="@array/action_entries"
@@ -54,7 +54,7 @@
             android:key="swipe_left_action_key"
             android:defaultValue="0"
             android:title="@string/category_left_swipe_gesture"
-            android:icon="@drawable/ic_music_prev"
+            android:icon="@drawable/ic_triple_left"
             android:summary="%s"
             android:dialogTitle="@string/category_left_swipe_gesture"
             android:entries="@array/action_entries"
@@ -64,7 +64,7 @@
             android:key="swipe_right_action_key"
             android:defaultValue="0"
             android:title="@string/category_right_swipe_gesture"
-            android:icon="@drawable/ic_music_next"
+            android:icon="@drawable/ic_triple_right"
             android:summary="%s"
             android:dialogTitle="@string/category_right_swipe_gesture"
             android:entries="@array/action_entries"
