msm8974-common: DeviceParts: introduce backlight dimmer
Change-Id: I56396bd0db483653aa5c268d627722f7c83edd65

--- a/DeviceParts/res/xml/main.xml
+++ b/DeviceParts/res/xml/main.xml
@@ -32,6 +32,16 @@
         android:defaultValue="true"/>
 
     <PreferenceCategory
+        android:title="@string/category_backlight_dimmer">
+        <com.aicp.device.BacklightDimmerPreference
+            android:key="backlight_dimmer"
+            android:title="@string/backlight_dimmer_title"
+            android:icon="@drawable/ic_dc"
+            android:summary="@string/backlight_dimmer_summary"
+            android:persistent="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/category_vibrator">
         <com.aicp.device.VibratorStrengthPreference
             android:key="vib_strength"
