msm8974-common: DeviceParts: introduce headphone gain
Change-Id: I148848f260f32194aff367c9ea589999a8b036a9

--- a/DeviceParts/res/xml/main.xml
+++ b/DeviceParts/res/xml/main.xml
@@ -42,6 +42,16 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:title="@string/category_audio">
+        <com.aicp.device.HeadphoneGainPreference
+            android:key="headphone_gain"
+            android:title="@string/headphone_gain_title"
+            android:icon="@drawable/ic_hp_gain"
+            android:summary="@string/headphone_gain_summary"
+            android:persistent="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/category_vibrator">
         <com.aicp.device.VibratorStrengthPreference
             android:key="vib_strength"
