msm8974-common: switch to AICP deviceparts repo
Change-Id: I0adc05369dffde6565610d4e76daec396c8e4e59

--- a/DeviceParts/res/layout/panel_modes.xml
+++ b/DeviceParts/res/layout/panel_modes.xml
@@ -76,7 +76,7 @@ limitations under the License
             android:layout_height="wrap_content"
             android:minHeight="?android:attr/listPreferredItemHeight"
             android:gravity="center_vertical"
-            android:text="@string/Wide_mode_title"
+            android:text="@string/wide_mode_title"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </RadioGroup>
