--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -22,5 +22,8 @@
 <resources>
     <!-- The CPU temperature sensor path, defaults to empty -->
     <string name="config_cpuTempSensor">/sys/class/thermal/thermal_zone5/temp</string>
+
+    <!-- Force Low qauality on scrren record for legacy devices -->
+    <bool name="config_screenRecordforceLowQuality">true</bool>
 </resources>
 
