msm8974-common: overlay: enable screenRecordforceLowQuality
Change-Id: Iaf3710ceb3cb453cf1acaa18eca559af37251fb2

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -320,4 +320,8 @@
     <string name="config_sysCPUTemp">/sys/class/thermal/thermal_zone0/temp</string>
     <string name="config_sysBatteryTemp">/sys/class/power_supply/battery/temp</string>
     <integer name="config_sysBatteryTempMultiplier">10</integer>
+
+    <!-- Force Low qauality on scrren record for legacy devices -->
+    <bool name="config_screenRecordforceLowQuality">true</bool>
+
 </resources>
